
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct android_app {TYPE_1__* activity; } ;
struct TYPE_5__ {int onLocationFree; } ;
typedef TYPE_2__ androidlocation_t ;
struct TYPE_4__ {int clazz; } ;
typedef int JNIEnv ;


 int CALL_VOID_METHOD (int *,int ,int ) ;
 int free (TYPE_2__*) ;
 scalar_t__ g_android ;
 int * jni_thread_getenv () ;

__attribute__((used)) static void android_location_free(void *data)
{
   struct android_app *android_app = (struct android_app*)g_android;
   androidlocation_t *androidlocation = (androidlocation_t*)data;
   JNIEnv *env = jni_thread_getenv();
   if (!env)
      return;

   CALL_VOID_METHOD(env, android_app->activity->clazz,
         androidlocation->onLocationFree);

   free(androidlocation);
}
